Update website title and navigation structure; add SVG logo and enhance styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <!-- Cabecera del documento, fuentes, referencias -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Arturo Cantú Data | Portafolio Web</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
     <header class="site-header">
         <nav class="navbar">
             <a href="#inicio" class="nav__logo">
-                <img src="src/img/logo.png" alt="Logo de la página web" >
+                <img src="src/img/logo.svg" alt="Logo de la página web" >
                 <span> Arturo Cantú</span>
             </a>
-            <ul class="nav__links">
+            <ul class="nav__menu">
                 <li><a href="#inicio" class="nav__link">Inicio</a></li>
                 <li><a href="#sobre-mi" class="nav__link">Sobre mí</a></li>
                 <li><a href="#proyectos" class="nav__link">Proyectos</a></li>
