Refactor navigation button class and add footer and cookie banner styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
 
-        <a href="#contacto" class="navbar__cta">Contáctame</a>
+        <a href="#contacto" class="nav__cta">Contáctame</a>
     </header>
 
     <!-- Aquí va el contenido principal de la página -->
