style: Menú hamburguesa mejora de estica.

--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
                 </button>
             </div>
 
+            <div class="nav__overlay" id="navOverlay"></div>
             <div class="nav__panel" id="mobilePanel" hidden>
                 <ul class="nav__panelList">
-                    <li><a href="#inicio" class="panel__link">Inicio</a></li>
-                    <li><a href="#sobre-mi" class="panel__link">Sobre mí</a></li>
-                    <li><a href="#proyectos" class="panel__link">Proyectos</a></li>
-                    <li><a href="#contacto" class="panel__link">Contacto</a></li>
+                    <li><a href="#inicio" class="panel-link">Inicio</a></li>
+                    <li><a href="#sobre-mi" class="panel-link">Sobre mí</a></li>
+                    <li><a href="#proyectos" class="panel-link">Proyectos</a></li>
+                    <li><a href="#contacto" class="panel-link">Contacto</a></li>
                     <li class="panel-divider"></li>
-                    <li><a href="#contacto"> Hablemos</a> </li>
+                    <li><a href="#contacto" class="panel-cta">Hablemos</a></li>
                 </ul>
             </div>
         </nav>
