fix: Urls en proyectos y redes.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <span class="project-card__tag">Python · Data · APIs</span>
                             <h3>QroNova - 2.º lugar en EnerHack 2025.</h3>
                             <p>Electrificación del transporte público en Querétaro mediante buses eléctricos con supercapacitores, respaldada por modelos de datos, simulaciones energéticas y análisis financiero.</p>
-                            <a href="#" class="project-card__link">
+                            <a href="https://qronova.crucerlabs.com" class="project-card__link">
                                 Ver proyecto
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -234,7 +234,7 @@
                             <span class="project-card__tag">Python · OpenCV · YOLO (Ultralytics) · ByteTrack</span>
                             <h3>Contador de vehículos en rotonda con visión por computadora.</h3>
                             <p>Detecta y rastrea autos en video (YOLO + ByteTrack), mide entradas/salidas por zonas configurables y exporta métricas y eventos a CSV, para su análisis en R. </p>
-                            <a href="#" class="project-card__link">
+                            <a href="https://uaq088-my.sharepoint.com/:v:/g/personal/acantu14_lms_uaq_mx/IQAhGbZ3aiUOTIB2HnC2Qw9xAU0ngZtqa8tdvTIB7QgwYek?e=X7MmB7&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D" class="project-card__link">
                                 Ver proyecto
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -247,10 +247,10 @@
                             <img src="src/img/imgCUTTUC.png" alt="Imagen del proyecto: Prototipo de conteo de pasajeros" class="project-card__image-img" loading="lazy">
                         </div>
                         <div class="project-card__content">
-                            <span class="project-card__tag">ML • Scikit-learn</span>
-                            <h3>CUT / TUC - Conteo de pasajeros por visión artificial.</h3>
+                            <span class="project-card__tag">Python · OpenCV</span>
+                            <h3>CUT / TUC - 2.º lugar en Hackaton Troyano 2024.</h3>
                             <p>Procesamiento de imágenes en tiempo real para analizar la afluencia de pasajeros en transporte público y escolar, desarrollado en Python sin frameworks de alto nivel.</p>
-                            <a href="#" class="project-card__link">
+                            <a href="https://youtu.be/v9eO2skQBjE?si=7frbJ3rpbbRYSEor" class="project-card__link">
                                 Ver proyecto
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -405,8 +405,8 @@
             <div>
                 <h4>Sigueme</h4>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/arturo-cantu-3b4b9820b/" target="_blank" rel="noopener">LinkedIn</a></li>
-                    <li><a href="https://www.linkedin.com/in/arturo-cantu-3b4b9820b/" target="_blank" rel="noopener">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/arturo-cantu/" target="_blank" rel="noopener">LinkedIn</a></li>
+                    <li><a href="https://github.com/Cantuuuu" target="_blank" rel="noopener">GitHub</a></li>
                 </ul>
             </div>
         </section>
