--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="site-header" id="top">
         <nav class="navbar container" aria-label="Navegación principal">
             <a href="#inicio" class="nav__logo" aria-label="Ir a Inicio">
-                <img src="src/img/logo.svg" alt="Logo de la página web" >
+                <img src="src/img/icons8-ciencia-de-datos.svg" alt="Logo de la página web" >
                 <span>Cantú<span class="brand-dot">.dev</span></span>
             </a>
             <div class="nav__actions">
